<resources>
    <string name="app_name">Ahuacamolli</string>
    <string name="title_activity_permission_rationale">Permission Rationale Activity</string>
    <string name="title_location_permission_rationale">Permission Rationale Location</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activities">Activities</string>
    <string name="title_sensors">Sensors</string>
    <string name="title_log">Log</string>
    <string name="title_bike_activity_details">Bike Activity Details</string>
    <string name="title_head_up">Head Up</string>
    <string name="title_surface_type">Surface Type</string>
    <string name="title_smoothness_type">Smoothness Type</string>
    <string name="action_okay">Okay</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_got_it">Got it</string>
    <string name="action_settings">Settings</string>
    <string name="action_hud">HUD</string>
    <string name="action_clear_activities">Clear activities</string>
    <string name="action_clear_log">Clear log</string>
    <string name="action_start_activity">Start biking</string>
    <string name="action_stop_activity">Stop biking</string>
    <string name="action_upload">Upload</string>
    <string name="action_delete_activity">Delete activity</string>
    <string name="action_flag_lab_conditions">Flag lab-conditions</string>
    <string name="action_unflag_lab_conditions">Un-flag lab-conditions</string>
    <string name="action_upload_successful">Uploaded data successfully</string>
    <string name="action_upload_failed">Uploading data failed</string>
    <string name="action_upload_already_done">Data has been updated already</string>
    <string name="action_uploaded">Uploaded</string>
    <string name="action_changed_after_upload">Changed after upload</string>
    <string name="action_activity_deleted">Activity deleted</string>
    <string name="action_flagged_lab_conditions">Flagged activity as under lab-conditions</string>
    <string name="action_unflagged_lab_conditions">Unflagged activity as under lab-conditions</string>
    <string name="status_flagged_lab_conditions">Lab conditions</string>
    <string name="action_tracking_bike_activity_idle">Bike activity</string>
    <string name="action_tracking_bike_activity_idle_description">Waiting for a bike activity</string>
    <string name="action_tracking_bike_activity">Bike activity</string>
    <string name="action_tracking_bike_activity_description">Tracking bike activity</string>
    <string name="action_enable_automatic_tracking">Enable automatic tracking</string>
    <string name="action_disable_automatic_tracking">Disable automatic tracking</string>
    <string name="action_reset">Reset</string>
    <string name="main_message_activity_permission_rationale">Track activity changes by letting us read your phone\'s activity transitions.</string>
    <string name="details_message_activity_permission_rationale">This app\'s experience requires access to your phone\'s activity transitions to display changes from walking to standing still.</string>
    <string name="main_message_location_permission_rationale">Track location by letting us read your phone\'s position.</string>
    <string name="details_message_location_permission_rationale">This app\'s experience requires access to your phone\'s position to connect collected data to a geolocation.</string>
    <string name="no_thanks_activity_permission_rationale">No Thanks</string>
    <string name="continue_activity_permission_rationale">Continue</string>
    <string name="enable_disable_button_activity_recognition">Enable/Disable Activity Recognition</string>
    <plurals name="measurements">
        <item quantity="zero">no measurements</item>
        <item quantity="one">%d measurement</item>
        <item quantity="other">%d measurements</item>
    </plurals>
    <string name="activity_transition">Activity Transition</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="label_accelerometer_x">x: </string>
    <string name="label_accelerometer_y">y: </string>
    <string name="label_accelerometer_z">z: </string>
    <string name="accelerometer_x">%1$.1f</string>
    <string name="accelerometer_y">%1$.1f</string>
    <string name="accelerometer_z">%1$.1f</string>
    <string name="label_minus">-</string>
    <string name="location">Location</string>
    <string name="label_lon">lon:</string>
    <string name="label_lat">lat:</string>
    <string name="lon">%1$.3f</string>
    <string name="lat">%1$.3f</string>
    <string name="speed">%1$.1f km/h</string>
    <string name="speed_max">max %1$.1f km/h</string>
    <string name="default_lon">-</string>
    <string name="default_lat">-</string>
    <string name="bike_activity">Bike Activity</string>
    <string name="bike_activity_with_surface_type">Bike Activity on %s surface</string>
    <plurals name="duration">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <string name="delimiter">·</string>
    <string name="delimiter_dash">-</string>
    <plurals name="samples">
        <item quantity="zero">no samples</item>
        <item quantity="one">%d sample</item>
        <item quantity="other">%d samples</item>
    </plurals>
    <string name="not_tracking">not tracking</string>
    <string name="tracking_mode">tracking mode</string>
    <string name="tracking_mode_manual">manual</string>
    <string name="tracking_mode_automatic">automatic</string>
    <string name="automatic_tracking_enabled">Automatic tracking enabled</string>
    <string name="default_start_time">10:42</string>
    <string name="default_stop_time">10:42</string>
    <string name="default_duration">not yet completed</string>
    <string name="default_samples">no samples</string>
    <string name="default_tracking_mode">tracking mode</string>
    <string name="settings_personal_settings">Personal Settings</string>
    <string name="setting_phone_position">phone_position</string>
    <string name="setting_phone_position_title">Phone Position</string>
    <string name="setting_phone_position_summary">"%s</string>
    <string name="setting_bike_type">bike_type</string>
    <string name="setting_bike_type_title">Bike Type</string>
    <string name="setting_bike_type_summary">"%s</string>
    <string name="settings_tracking">Tracking</string>
    <string name="setting_tracking_automatic">tracking_automatic</string>
    <string name="setting_tracking_automatic_title">Automatic Tracking</string>
    <string name="setting_tracking_automatic_summary">Whether or not biking activities are started and stopped automatically</string>
    <string name="settings_sample">Sample</string>
    <string name="setting_sample_interval">sample_interval</string>
    <string name="setting_sample_interval_title">Sample Interval</string>
    <string name="setting_sample_interval_summary">Time between two samples in seconds</string>
    <string name="settings_measurement">Measurement</string>
    <string name="setting_measurements_per_sample">measurements_per_sample</string>
    <string name="setting_measurements_per_sample_title">Measurement per sample</string>
    <string name="setting_measurements_per_sample_summary">Number of measurements per sample</string>
    <string name="setting_measurement_interval">measurement_interval</string>
    <string name="setting_measurement_interval_title">Measurement Interval</string>
    <string name="setting_measurement_interval_summary">Time between two measurements in milliseconds</string>
    <string name="settings_about">About</string>
    <string name="settings_user_id">User ID</string>
    <string name="settings_app_version">App Version</string>
    <string name="bike_activity_sample">Bike Activity Sample</string>
    <string name="bike_activity_sample_unlabled">Bike Activity Sample (missing label)</string>
    <string name="bike_activity_sample_too_slow">Bike Activity Sample (too slow)</string>
    <string name="bike_activity_sample_invalid">Bike Activity Sample (invalid)</string>
    <string name="bike_activity_sample_speed">%1$.1f km/h</string>
    <string name="bike_activity_sample_accelerometer">%1$.1f</string>
    <string name="default_start_time_with_seconds">10:42:00</string>
    <string name="default_measurements">no measurements</string>
    <string name="default_speed">22 km/h</string>
    <string name="default_speed_max">max 44 km/h</string>
    <string name="default_accelerometer">4.2</string>
    <string-array name="phone_position_array">
        <item>PHONE POSITION</item>
        <item>in pants pocket</item>
        <item>in jacket pocket</item>
        <item>in backpack</item>
        <item>in bike bag</item>
        <item>on bike mount</item>
        <item>other</item>
    </string-array>
    <string-array name="phone_position_preference_array">
        <item>in pants pocket</item>
        <item>in jacket pocket</item>
        <item>in backpack</item>
        <item>in bike bag</item>
        <item>on bike mount</item>
        <item>other</item>
    </string-array>
    <string-array name="bike_type_array">
        <item>BIKE TYPE</item>
        <item>road bicycle</item>
        <item>touring bicycle</item>
        <item>cyclo cross</item>
        <item>cargo bike</item>
        <item>mountain bike</item>
        <item>racing bicycle</item>
        <item>electric bicycle</item>
        <item>other</item>
    </string-array>
    <string-array name="bike_type_preference_array">
        <item>road bicycle</item>
        <item>touring bicycle</item>
        <item>cyclo cross</item>
        <item>cargo bike</item>
        <item>mountain bike</item>
        <item>racing bicycle</item>
        <item>electric bicycle</item>
        <item>other</item>
    </string-array>
    <string name="bike_activity_measurement_lon_lat">%1$.3f</string>
    <string name="bike_activity_measurement_speed">%1$.1f km/h</string>
    <string name="bike_activity_measurement_accelerometer">%1$.1f</string>
    <string name="dialog_nothing_changed_title">Nothing changed</string>
    <string name="dialog_nothing_changed_message">Nothing has changed since you uploaded the data. Do you still want to re-upload this bike activity?</string>
    <string name="dialog_complete_data_title">Incomplete data</string>
    <string name="dialog_complete_data_message">Please select surface type, smoothness type, phone position and bike type before upload</string>
    <string name="dialog_upload_again_title">Re-upload bike activity</string>
    <string name="dialog_upload_again_message">Do you want to re-upload this bike activity?</string>
    <string name="leave_hud_mode">Leave hud mode</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="default_value">value</string>
    <string name="default_comment">comment</string>
    <string name="default_surface_type">Surface type</string>
    <string name="default_smoothness_type">Smoothness type</string>
    <string name="default_phone_position">Phone position</string>
    <string name="default_bike_type">Bike type</string>
    <string name="description_ongoing">Ongoing</string>
    <string name="description_still">Still</string>
    <string name="description_walking">Walking</string>
    <string name="description_running">Running</string>
    <string name="description_on_bicycle">On bicycle</string>
    <string name="description_in_vehicle">In vehicle</string>
    <string name="description_unknown">Unknown</string>
    <string name="description_bike">Bike</string>
    <string name="description_details">Details</string>
    <string name="description_check">Check</string>
    <string name="description_warning">Warning</string>
    <string name="description_recording">Recording</string>
    <string name="description_duration">Duration</string>
    <string name="description_surface_type">Surface Type</string>
</resources>