<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_tracking">

        <CheckBoxPreference
            android:defaultValue="false"
            app:key="@string/setting_tracking_automatic"
            app:summary="@string/setting_tracking_automatic_summary"
            app:title="@string/setting_tracking_automatic_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_sample">

        <SeekBarPreference
            android:defaultValue="25"
            android:max="60"
            android:min="0"
            app:key="sample_delay"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/setting_sample_interval_summary"
            app:title="@string/setting_sample_interval_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_measurement">

        <SeekBarPreference
            android:defaultValue="500"
            android:max="1000"
            android:min="1"
            app:key="measurements_per_sample"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true"
            app:summary="@string/setting_measurements_per_sample_summary"
            app:title="@string/setting_measurements_per_sample_title"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:defaultValue="50"
            android:max="100"
            android:min="0"
            app:key="measurement_delay"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            app:summary="@string/setting_measurement_interval_summary"
            app:title="@string/setting_measurement_interval_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_about">

        <EditTextPreference
            android:enabled="false"
            android:key="user_id"
            android:persistent="false"
            android:selectable="false"
            android:shouldDisableView="false"
            android:title="@string/settings_user_id" />

        <EditTextPreference
            android:enabled="false"
            android:key="app_version"
            android:persistent="false"
            android:selectable="false"
            android:shouldDisableView="false"
            android:title="@string/settings_app_version" />

    </PreferenceCategory>

</PreferenceScreen>