<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_flag_lab_conditions"
        android:icon="@drawable/ic_outline_science_24"
        android:orderInCategory="50"
        android:title="@string/action_flag_lab_conditions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unflag_lab_conditions"
        android:icon="@drawable/ic_baseline_science_24"
        android:orderInCategory="100"
        android:title="@string/action_unflag_lab_conditions"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="200"
        android:title="@string/action_delete_activity"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_hud"
        android:icon="@drawable/ic_baseline_fullscreen_24"
        android:orderInCategory="300"
        android:title="@string/action_hud"
        app:showAsAction="ifRoom" />
</menu>