<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="@dimen/textview_padding">

    <ImageView
        android:id="@+id/ivBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_bike"
        android:gravity="center_vertical"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/ic_baseline_radio_button_unchecked_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey_500" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_start_time_with_seconds"
        app:layout_constraintBottom_toBottomOf="@id/ivBike"
        app:layout_constraintLeft_toRightOf="@id/ivBike"
        app:layout_constraintTop_toTopOf="@id/ivBike" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bike_activity_sample"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBike" />

    <TextView
        android:id="@+id/tvMeasurements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_measurements"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvDelimiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/delimiter"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvMeasurements"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_speed"
        app:layout_constraintStart_toEndOf="@id/tvDelimiter"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvAccelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_accelerometer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>