<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clBikeActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="@dimen/textview_padding">

    <ImageView
        android:id="@+id/ivBike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_bike"
        android:gravity="center_vertical"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/ic_baseline_pedal_bike_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey_500" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_start_time"
        app:layout_constraintBottom_toBottomOf="@id/ivBike"
        app:layout_constraintLeft_toRightOf="@id/ivBike"
        app:layout_constraintTop_toTopOf="@id/ivBike" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bike_activity"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBike" />

    <ImageView
        android:id="@+id/ivCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_check"
        android:gravity="center_vertical"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/ic_outline_check_24"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:tint="@color/green_500" />

    <ImageView
        android:id="@+id/ivOngoing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_ongoing"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:tint="@color/red_600" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvDelimiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/delimiter"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvDuration"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvSamples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_samples"
        app:layout_constraintStart_toEndOf="@id/tvDelimiter"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvDelimiter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/delimiter"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvSamples"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvTrackingType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_tracking_mode"
        app:layout_constraintStart_toEndOf="@id/tvDelimiter2"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>