<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.cards.ActivityTransitionCardFragment">

    <com.google.android.material.card.MaterialCardView
        style="Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="?attr/colorSurface"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                style="@style/AppTheme.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_transition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subTitle"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measurements"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="@+id/subTitle"
                app:layout_constraintTop_toBottomOf="@+id/subTitle">

                <ImageView
                    android:id="@+id/ivStill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/description_still"
                    android:src="@drawable/ic_baseline_emoji_people_24"
                    app:tint="@color/grey_500" />

                <ImageView
                    android:id="@+id/ivWalking"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/description_walking"
                    android:src="@drawable/ic_baseline_directions_walk_24"
                    app:tint="@color/grey_500" />

                <ImageView
                    android:id="@+id/ivRunning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/description_running"
                    android:src="@drawable/ic_baseline_directions_run_24"
                    app:tint="@color/grey_500" />

                <ImageView
                    android:id="@+id/ivOnBicycle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/description_on_bicycle"
                    android:src="@drawable/ic_baseline_pedal_bike_24"
                    app:tint="@color/grey_500" />

                <ImageView
                    android:id="@+id/ivInVehicle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/description_in_vehicle"
                    android:src="@drawable/ic_baseline_directions_car_24"
                    app:tint="@color/grey_500" />

                <ImageView
                    android:id="@+id/ivUnknown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/description_unknown"
                    android:src="@drawable/ic_baseline_help_outline_24"
                    app:tint="@color/grey_500" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>