<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccelerometerCardFragment">

    <com.google.android.material.card.MaterialCardView
        style="Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="?attr/colorSurface"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                style="@style/AppTheme.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subTitle"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measurements"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <!-- Lon -->

            <TextView
                android:id="@+id/tvLabelLon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="32dp"
                android:text="@string/label_lon"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/subTitle" />

            <TextView
                android:id="@+id/tvLon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_lon"
                app:layout_constraintStart_toEndOf="@+id/tvLabelLon"
                app:layout_constraintTop_toBottomOf="@+id/subTitle" />

            <!-- Lat -->

            <TextView
                android:id="@+id/tvLabelLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="32dp"
                android:text="@string/label_lat"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelLon" />

            <TextView
                android:id="@+id/tvLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_lat"
                app:layout_constraintStart_toEndOf="@+id/tvLabelLon"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelLon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>